# moska

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sandbox.py  setup.py  test_files_csv.py
benchmark/: benchmark.py  benchmark_multi.py  benchmark_multi_files.py
benchmarks/: benchmark.py  benchmark_mcts.py  benchmark_mcts_cuda.py  benchmark_multi.py  benchmark_multi_cuda.py
models/: hand_predict_mlp_1k_1000epochs.pth  hand_predict_mlp_1k_10epochs.pth  hand_predict_mlp_25k_95epochs.pth  hand_predict_mlp_50k_83epochs.pth
moskaengine/: __init__.py
moskaengine/game/: __init__.py  deck.py  engine.py  game.py
moskaengine/mcts/: __init__.py  mcts.py
moskaengine/players/: __init__.py  abstract_player.py  determinized_mcts_player.py  determinized_nn_mcts_player.py  determnized_mcts_player.py  heuristic_player.py  human_player.py  mcts_player.py  nn_mcts_player.py  random_player.py
moskaengine/research/: benchmark.py  benchmark_expl_rate.py  benchmark_mcts_parameters.py  benchmark_multi.py  benchmark_multi_cuda.py  create_dataset_csv.py  create_dataset_parquet.py
moskaengine/research/model_training/: evaluate_saved.py  (+3 more)
moskaengine/utils/: __init__.py  card_utils.py  game_utils.py  player_utils.py
research/: __init__.py  benchmark_multi.py  create_dataset_csv.py  create_dataset_parquet.py  test_model.py  train_model.py
research/datasets/: create_dataset_csv.py  create_dataset_parquet.py  view_dataset_csv.py  view_dataset_parquet.py
research/model_training/: card_predictor_cnn_1.pth  evaluate_saved.py  train_model.py  train_model_2.py
